--- a/notebooks/calculate_2d_3d_dice.ipynb
+++ b/notebooks/calculate_2d_3d_dice.ipynb
@@ -10,7 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
+   "id": "080e77d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('/workspace/noise_and_dice')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5dfab5be",
    "metadata": {},
    "outputs": [],
@@ -19,18 +30,20 @@
     "\n",
     "config['images'] = '/processed/Public/TCIA'\n",
     "config['dataset'] = 'tcia'\n",
-    "config['model'] = 'vista3d'\n",
+    "config['model'] = 'TS'\n",
     "config['gt'] = '/processed/Public/TCIA/labels-vista3d'\n",
-    "config['predictions'] = '/processed/Public/TCIA/predictions/vista3d'\n",
-    "#config['predictions'] = '/processed/Public/TCIA/predictions/TotalSegmentator_mapped'\n",
-    "config['labels_json'] = 'labels-TCIA-pediatric.json'\n",
     "\n",
-    "#config['labels_json_TS'] = 'labels-TCIA-pediatric-TS.json'"
+    "\n",
+    "#config['predictions'] = '/processed/Public/TCIA/predictions/vista3d'\n",
+    "#config['labels_json'] = 'labels-TCIA-pediatric.json'\n",
+    "\n",
+    "config['predictions'] = '/processed/Public/TCIA/predictions/TotalSegmentator_mapped'\n",
+    "config['labels_json'] = 'labels-TCIA-pediatric.json'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "d7c05589",
    "metadata": {},
    "outputs": [],
@@ -41,10 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "c085f837",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'labels_json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlabels_json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m jsonfile:\n\u001b[1;32m      3\u001b[0m     config[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabels\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(jsonfile)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'labels_json'"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "with open(config['labels_json'],'r') as jsonfile:\n",
@@ -53,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8961e9dc",
    "metadata": {},
    "outputs": [],
@@ -69,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "21fc3952",
    "metadata": {},
    "outputs": [],
@@ -101,7 +126,7 @@
     "    sum_sizes = cp.sum(true_binary) + cp.sum(pred_binary)\n",
     "\n",
     "    if sum_sizes == 0:\n",
-    "        return 1.0, intersection, sum_sizes  # Return 1.0 if GT & prediction are both empty\n",
+    "        return np.nan, intersection, sum_sizes  # Return 1.0 if GT & prediction are both empty\n",
     "\n",
     "    if cp.sum(true_binary) == 0 and cp.sum(pred_binary) > 0:\n",
     "        return 0.0, intersection, sum_sizes  # False positive: GT is missing, but prediction exists\n",
@@ -115,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "be76e1bb",
    "metadata": {},
    "outputs": [],
@@ -131,9 +156,10 @@
     "        if cp.sum(true_array == label) > 0 or cp.sum(pred_array == label) > 0:\n",
     "            dice, intersection, sum_sizes = dice_coefficient(true_array, pred_array, label)\n",
     "            dice_scores[key] = dice\n",
-    "            macro_dice_list.append(dice)  #  Only include organs that exist\n",
+    "            if dice:\n",
+    "                macro_dice_list.append(dice)  #  Only include organs that exist\n",
     "        else:\n",
-    "            dice_scores[key] = 1.0  # Still store the Dice score for reference, but don't include in macro\n",
+    "            dice_scores[key] = np.nan  # Still store the Dice score for reference, but don't include in macro\n",
     "            intersection = 0\n",
     "            sum_sizes = 0\n",
     "\n",
@@ -149,7 +175,8 @@
     "    return dice_scores, macro_average_dice, micro_average_dice\n",
     "\n",
     "def compute_dice_2d(label_3d, pred_3d, labels):\n",
-    "    \"\"\"Computes slice-wise 2D Dice scores using RAPIDS/cuDF.\"\"\"\n",
+    "    \"\"\"Computes slice-wise 2D Dice scores using RAPIDS/cuDF.\n",
+    "    'overall' score is computed using micro-average (aggregated pixel-level Dice across classes).\"\"\"\n",
     "    num_slices = label_3d.shape[2]\n",
     "    record_2d = {'overall': {}}\n",
     "\n",
@@ -160,23 +187,40 @@
     "        label_slice = label_3d[:, :, z]\n",
     "        pred_slice = pred_3d[:, :, z]\n",
     "\n",
-    "        # Compute overall Dice only when there's segmentation in at least one mask\n",
-    "        if cp.sum(label_slice) > 0 or cp.sum(pred_slice) > 0:\n",
-    "            overall_dice, _, _ = dice_coefficient(label_slice > 0, pred_slice > 0, 1)\n",
-    "        else:\n",
-    "            overall_dice = float('nan')  # If both are empty, assign NaN\n",
-    "\n",
-    "        record_2d['overall'][str(z + 1)] = overall_dice\n",
+    "        total_tp = 0\n",
+    "        total_fp = 0\n",
+    "        total_fn = 0\n",
     "\n",
     "        for key, label in labels.items():\n",
-    "            if cp.sum(label_slice == label) > 0 or cp.sum(pred_slice == label) > 0:\n",
-    "                organ_dice, _, _ = dice_coefficient(label_slice, pred_slice, label)\n",
+    "            pred_mask = (pred_slice == label)\n",
+    "            gt_mask = (label_slice == label)\n",
+    "\n",
+    "            tp = cp.sum(pred_mask & gt_mask)\n",
+    "            fp = cp.sum(pred_mask & ~gt_mask)\n",
+    "            fn = cp.sum(~pred_mask & gt_mask)\n",
+    "\n",
+    "            total_tp += tp\n",
+    "            total_fp += fp\n",
+    "            total_fn += fn\n",
+    "\n",
+    "            if tp + fp + fn > 0:\n",
+    "                organ_dice = (2 * tp) / (2 * tp + fp + fn)\n",
+    "                organ_dice = float(organ_dice)\n",
     "            else:\n",
-    "                organ_dice = float('nan')  # If organ is missing in both, assign NaN\n",
+    "                organ_dice = float('nan')\n",
     "\n",
     "            record_2d[key][str(z + 1)] = organ_dice\n",
     "\n",
+    "        if total_tp + total_fp + total_fn > 0:\n",
+    "            overall_dice = (2 * total_tp) / (2 * total_tp + total_fp + total_fn)\n",
+    "            overall_dice = float(overall_dice)\n",
+    "        else:\n",
+    "            overall_dice = float('nan')\n",
+    "\n",
+    "        record_2d['overall'][str(z + 1)] = overall_dice\n",
+    "\n",
     "    return record_2d\n",
+    "\n",
     "\n",
     "def process_ct_file(ct_name, config):\n",
     "    \"\"\"Processes a single CT file for 3D and 2D Dice computation.\"\"\"\n",
@@ -235,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "de9bbaa2",
    "metadata": {},
    "outputs": [
@@ -250,7 +294,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100% 358/358 [2:27:35<00:00, 24.74s/it]  \n"
+      "100%|██████████| 358/358 [29:28<00:00,  4.94s/it]\n"
      ]
     }
    ],
@@ -271,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "5b395325",
    "metadata": {},
    "outputs": [
@@ -298,19 +342,11 @@
     "\n",
     "print(f\"3D Results saved to {output_csv_path}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa9ab1a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
