--- a/notebooks/calculate_2d_3d_dice.ipynb
+++ b/notebooks/calculate_2d_3d_dice.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "080e77d1",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "5dfab5be",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "d7c05589",
    "metadata": {},
    "outputs": [],
@@ -54,22 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "c085f837",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'labels_json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlabels_json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m jsonfile:\n\u001b[1;32m      3\u001b[0m     config[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabels\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(jsonfile)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'labels_json'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "with open(config['labels_json'],'r') as jsonfile:\n",
@@ -78,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8961e9dc",
    "metadata": {},
    "outputs": [],
@@ -94,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "21fc3952",
    "metadata": {},
    "outputs": [],
@@ -140,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "be76e1bb",
    "metadata": {},
    "outputs": [],
@@ -279,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "de9bbaa2",
    "metadata": {},
    "outputs": [
@@ -294,7 +282,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 358/358 [29:28<00:00,  4.94s/it]\n"
+      "100%|██████████| 358/358 [25:34<00:00,  4.29s/it]\n"
      ]
     }
    ],
@@ -315,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "5b395325",
    "metadata": {},
    "outputs": [
@@ -323,8 +311,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2D Results saved to tcia_2d_dice_vista3d.xlsx\n",
-      "3D Results saved to tcia_3d_dice_vista3d.csv\n"
+      "2D Results saved to tcia_2d_dice_TS.xlsx\n",
+      "3D Results saved to tcia_3d_dice_TS.csv\n"
      ]
     }
    ],
